positioning-and-floating/fix: z-index property removed

--- a/style.css
+++ b/style.css
@@ -59,7 +59,6 @@ body{
   background-color: #fbaf5d;
   border: 1px solid #333333;
   padding: 10px 5px 15px;
-  z-index: 4;
 }
 .socials__text{
   font-size: 1.6rem;
@@ -93,25 +92,21 @@ body{
   border:3px solid #000;
   width: 525px;
   margin: 0 auto;
+  left: calc(50% - 262.5px);
+  position: absolute;
 }
 .page.first{
-  position: relative;
-  z-index: 3;
   background-color: #ebebeb;
 }
 .page.second, .page.third{
   min-height: 750px;
-  position: absolute;
-  left: calc(50% - 262.5px);
 }
 .page.second{
-  z-index: 2;
   background-color: #cccccc;
   top: 20px;
   margin-left: 20px;
 }
 .page.third{
-  z-index: 1;
   background-color: #acacac;
   top: 40px;
   margin-left: 40px;
